# filesMind

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  README.zh-CN.md  SECURITY.md  Skeleton-Refinement.md  docling  fix_hf.py  main.py  pyproject.toml  verify_structure.py
.claude/: settings.local.json
backend/: .env.example  __init__.py  analyze_md_deep.py  analyze_md_structure.py  anchor_generator.py  api_endpoints_test.py  app.py  check_gpu.py  cognitive_engine.py  cognitive_engine_test.py  desktop_server.py  fix_md_hierarchy.py  fix_md_hierarchy_test.py  generate_test_docs.py  hardware_utils.py  macos_perf.py  parse_concurrency.py  parse_concurrency_test.py  parser_service.py  parser_service_test.py  rebuild_source_indexes.py  refine_node_activity_test.py  refine_policy.py  runtime_env.py  runtime_hint.py  sqlite_store.py  structure_utils.py  structure_utils_test.py  test_fixed_tree.py  test_hierarchy.py  test_out.txt  test_pipeline.py  test_run_out.txt  test_universal_hf.py  test_universal_hf_results.json  xmind_exporter.py
backend/activities/: __init__.py  assemble_markdown_activity.py  build_skeleton_activity.py  completeness_gate_activity.py  parse_pdf_activity.py  persist_export_activity.py  refine_node_activity.py
backend/migrations/: 0001_temporal_rebuild.sql
backend/repo/: __init__.py  db.py  documents_repo.py  events_repo.py  nodes_repo.py
backend/tests/: conftest.py  test_anchor_pollution.py  test_page_basis.py
backend/worker/: main.py
backend/workflow_contracts/: __init__.py  errors.py  models.py  transitions.py
backend/workflows/: __init__.py  document_workflow.py
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: settings.spec.js
frontend/scripts/: check-bundle-size.mjs
frontend/src/: App.vue  WorkspaceShell.vue  dummy.spec.js  main.js  style.css
frontend/src/components/: MindMap.vue  VirtualPdfViewer.vue
frontend/src/router/: index.js
frontend/src/services/: apiClient.js  macosRuntime.js  runtimeConfig.js
native/FilesMindApp/: APP_TARGET_PLAN.txt
scripts/: e2e_payload_benchmark.py  perf_compare.py  test_all.sh
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/binaries/: filesmind-backend-aarch64-apple-darwin
src-tauri/src/: main.rs
