[project]
name = "filesmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "certifi>=2025.1.31",
    "docling>=2.73.1",
    "fastapi[standard]>=0.115.0",
    "filelock>=3.19.1",
    "marker-pdf",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.20",
    "docling-hierarchical-pdf>=0.0.1",
    "cryptography>=44.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402", "E741", "E701", "F841"]
